--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.4",
-    "react": "^19.2.4",
-    "recharts": "^3.7.0",
+    "@google/genai": "^1.38.0",
+    "crypto": "^1.0.1",
+    "dotenv": "^17.3.1",
+    "ethers": "^6.16.0",
     "lucide-react": "^0.563.0",
-    "@google/genai": "^1.38.0"
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
